# ce-ratio

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: rank_hosts.rs
src/: decay.rs  lib.rs
tests/: properties.rs
